--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Nikolaos Androutsopoulos
-title: NikolaosAndroutsopoulos
+name: Ioannis Androutsopoulos
+title: Ioannis Androutsopoulos
 description: Ciencia y tecnología de alimentos
 
 theme: jekyll-theme-minimal
